# mumble-telegram-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  deps-docker-compose.yaml  skaffold.yaml
.devcontainer/: devcontainer.json
manifests/: configmap.yaml  deployment.yaml
mumble-client-rs/: Cargo.toml
mumble-client-rs/src/: client.rs  lib.rs  tls_configuration.rs
mumble-client-rs/src/client/: client_info.rs  config.rs  raw_mumble_client.rs  stateful_mumble_client.rs
mumble-client-rs/src/client/stateful_mumble_client/: channel.rs  event.rs  server.rs  user.rs
mumble-protocol-rs/: Cargo.toml  build.rs
mumble-protocol-rs/protos/: Mumble.proto
mumble-protocol-rs/src/: control.rs  lib.rs
mumble-telegram-bot/: Cargo.toml  build.rs  config.yaml
mumble-telegram-bot/src/: main.rs  mumble_actor.rs  settings.rs  state_file_actor.rs  telegram_bot_actor.rs  telegram_sender_actor.rs
