[package]
name = "mumble-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-codec"]
tokio-codec = ["tokio-util"]

[dependencies]
mumble-protocol-rs = { path = "../mumble-protocol-rs" }
tokio = { version =  "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26.0" }
rustls-pki-types = "1.7.0"
rustls-native-certs = "0.7.0"
tokio-util = { version = "0.7.11", features = ["codec"], optional = true }
futures = "0.3.30"
futures-util = "0.3.30"
os_info = "3.7.0"
log = "0.4.17"