[package]
name = "mumble-protocol-rs"
version = "0.1.0"
authors = [
  "William Taylor <me@willtaylor.info>",
  "Marco Rebhan <me@dblsaiko.net>",
  "Jonas Herzig <me@johni0702.de>"
]
edition = "2021"
description = "Rust implementation of the Mumble protocol"
license = "MIT OR Apache-2.0"

[features]
default = ["tokio-codec"]
tokio-codec = ["tokio-util"]

[build-dependencies]
prost-build = "0.11.9"

[dependencies]
bytes = "1.4.0"
tokio-util = { version = "0.7.8", features = ["codec"], optional = true }
prost = "0.11.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec", "net"] }
tokio-native-tls = "0.3"
