[package]
name = "mumble-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3.0"

[dependencies]
mumble-client-rs = { path = "../mumble-client-rs" }
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
config = { version = "0.13.3", features = ["yaml"] }
serde = "1.0"
serde_derive = "1.0.8"
serde_alias = "0.0.2"
serde_json = "1.0"
tokio-rustls = { version = "0.24.0", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6.2"
futures = "0.3.28"