[package]
name = "mumble-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3.0"

[dependencies]
mumble-client-rs = { path = "../mumble-client-rs" }
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.37.0", features = ["rt-multi-thread", "macros"] }
config = { version = "0.14.0", features = ["yaml"] }
serde = "1.0.201"
serde_derive = "1.0.201"
serde_alias = "0.0.2"
serde_json = "1.0.117"
tokio-rustls = { version = "0.26.0" }
rustls-pki-types = "1.7.0"
rustls-native-certs = "0.7.0"
futures = "0.3.28"